[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
anyhow = "1.0.64"
log = "0.4.17"
env_logger = "0.9.0"
rand = "0.8.5"
thiserror = "1.0.34"
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.5"