[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
anyhow = "1.0.64"
log = "0.4.17"
env_logger = "0.9.0"
rand = "0.8.5"
thiserror = "1.0.34"
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
common = { package = "common", path = "../common" }