[package]
name = "server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
moka = { version = "0.12.1", features = ["sync"] }
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"
thiserror = "1.0.49"
serde = { version = "1.0.189", features = ["derive"] }
bincode = "1.3.3"
common = { package = "common", path = "../common" }